@@ -1,3 +1,8 @@
+2022-02-14 (2.14.5)
+
+- Added argument `--options` for mysqldump
+- Imporved CLI documentation
+
 2022-02-10 (2.14.4)
 
 - added `--use-default` to avoid breaking the MFA login
